src/assetbundles/src/css/Translations.css
/* ... */
#acc-tabs ul li a {
    display: block;
    position: relative;
    border-radius:4px 4px 0 0;
    padding: 12px 24px;
    max-width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    box-sizing: border-box;
    line-height: 1.2;
}
#acc-tabs ul li a.sel {
    background-clip: padding-box;
    background: #fff;
    box-shadow: 0 0 0 1px #cdd8e4, 0 2px 12px rgba(205, 216, 228, 0.5);
    color: #3f4d5a;
    z-index: 1;
}

@media only screen and (max-width: 1070px) and (min-width: 975px) {
    #header .translations-dropdown a span {
        display: none;
    }
}
@media only screen and (max-width: 975px) {
    #header .translations-dropdown {
        margin: 5px 0px !important;
    }
}
.iframe-line {
    background: #e3e5e8;
    height: 100%;
    width: 1px;
    position: absolute;
    transform: inherit;
    left: 50%;
    transform: translateX(-50%);
}

.visual iframe {
    width: calc(50% - 2px);
    min-height: 1000px;
}

@media only screen and (max-width: 720px) {
    .translations-order-step-btngroup {
        display: block;
        width: 100%;
        min-width: 0;
    }

    .translations-order-step-btngroup ul {
        display: block;
    }

    .translations-order-step-btngroup li {
        display: block;
        margin: 0 0 1em;
        width: 100%;
    }

    .translations-order-step-btngroup .btn {
        width: 100%;
    }

    .translations-element-index table.data {
        min-width: 0;
        width: 100%;
    }

    .translations-order-step table.data {
        min-width: 0;
        width: 100%;
    }

    .translations-order-detail-summary{
        width: 100%;
    }

    .translations-order-detail-entries{
        width: 100%;
    }
}

#sync-orders {
    position: relative;
}

#translations-dashboard .progressbar, #sync-orders .progressbar {
    left: 50%;
    top: 50%;
    transform: translateY(-50%) translateX(-50%);
    z-index: 999;
}

.mt--30 {
    margin-top: -30px !important;
}

.on-top {
    position: relative;
    z-index: 10;
}

.margin-left{
    margin-left: 24px;
}

.margin-right{
    margin-right: 24px;
}

#button-container {
    display: flex;
}

#translations-dashboard .widget-name {
    float: left;
}

#translations-dashboard .buttons {
    margin: 10px 0 14px;
}

.btngroup-container {
    align-content: flex-end;
    flex-direction: column;
    width: 100%;
}

#translations-field .translations-dropdown {
    float: right;
    margin: 0px 0px 0px 0px;
}

.translations-icon svg {
    display: flex;
    height: auto;
    margin-right: 12px;
    width: 16px;
}

.translations-icon svg path {
    fill: #8f98a3;
}

.settings-sel {
    background: #fff;
}

.settings-sel .translations-icon svg path {
    fill: #b9bfc6 !important;
}

.sidebar nav li a.settings-sel {
    background: #737f8c !important;
    color: #fff !important;
}

#trial-notice .link {
    display: inline-block;
    padding: 0 10px ;
}

.translations-about .link {
    padding-bottom: 15px;
}

.translations-about .link a {
    padding-right: 15px;
}

.static-trans-footer .pagination {
    display: none;
}

.footer-order-navigation{
    background-color: #f3f7fc;
    border-radius: 0 0 5px 5px;
    display: flex;
    justify-content: space-between;
    margin: 0px -24px -24px -24px;
    padding: 10px 24px;
}

.top-order-navigation{
    background-color: #f3f7fc;
    border-radius: 5px 5px 0 0;
    display: flex;
    justify-content: space-between;
    margin: -24px -24px 20px -24px;
    padding: 10px 24px;
}

.top-order-navigation span,
.footer-order-navigation span{
    margin: 0px 10px;
}

.footer-order-navigation a,
.top-order-navigation a{
    color: #606d7b;
    transition: color linear 100ms;
}

.footer-order-navigation a:hover,
.top-order-navigation a:hover{
    color: #0B69A3;
}

/* CSS Used in Order Create and Details page */

.publish-row {
    background-color: lightgray;
    height: 3em;
    padding: 10px;
}

.close-publish-modal {
    font-size: 20px;
}

.float-right {
    float: right !important;
}

.pl-10 {
    padding-left: 10px;
}

.pr-10px {
    padding-right: 10px;
}

.pl-5 {
    padding-left: 5px;
}

.pt-10 {
    padding-top: 10px !important;
}

.pt-5 {
    padding-top: 5px !important;
}

.w-300 {
    width: 300px;
}

.w-100 {
    width: 100%;
}

.fw-400 {
    font-weight: 400;
}

.ml-auto {
    margin-left: auto;
}

.mr-auto {
    margin-right: auto !important;
}

.h-6 {
    height: 6em;
}

.h-10 {
    height: 10em;
}

.h-8 {
    height: 8em;
}

.h-7 {
    height: 7em;
}

.pr-10 {
    padding-right: 10em;
}

.mb-1 {
    margin-bottom: 1em;
}

.p-0 {
    padding: 0 !important;
}

.df {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

#approve-publish-form .footer,
.modal .resizehandle {
    z-index: 9;
}

.footer .select-all-checkbox {
    float: left;
}

.scroll-x-auto {
    overflow-x: auto;
    align-items: center;
}

td .elements .element, td .elements .element.sel:focus {
    background-color: inherit !important;
    cursor: pointer;
}

tr.clone-modal-tr:not(.disabled):hover tr.file-diff-data th,
tr.clone-modal-tr:not(.disabled):hover tr.file-diff-data td {
    background-color: white !important;
}

.clone-modal-tr {
    box-shadow: rgb(205, 216, 228) 0px 0px 0px 1px, rgba(205, 216, 228, 0.5) 0px 2px 12px;
    border-radius: 5px;
    cursor: pointer;
}

.scroll-y-auto {
    overflow-y: auto;
    height: 90%;
}

.position-fixed {
    position: fixed;
    width: 65%;
}

.mt-4 {
    margin-top: 4em;
}

select[name="version"] {
    width: 120px;
}

.mt-10px {
	margin-top: 10px;
}

.mb-20px {
	margin-bottom: 20px;
}

.diff-tl {
    font-size: 10px;
}

.cursor-pointer {
    cursor: pointer !important;
}

.diff-copy {
    cursor: pointer;
    fill: #3f4d5a;
    padding: 10px;
    position: absolute;
    right: 0;
    top: 0;
}

.target {
    border-bottom: 1px solid rgba(51, 64, 77, 0.1) !important;
    overflow-wrap: anywhere;
    padding-right: 26px !important;
    width: 50%;
}
/* ... */

